# regression-recommendation

./: .gitignore  EDA.ipynb  lightGBM.ipynb  main.py  modeling.ipynb  negative_interactions.ipynb  scoring.ipynb  test.py  test_sparse.ipynb
V1/: modeling.ipynb  scoring.ipynb
V1/analysis/: EDA.ipynb
V1/eval_metrics/: setup.py
V2/: .gitignore  README.md  TF__model.h5  TF_model.h5  TF_model.keras  TF_model_weights.h5  change_parent_class  change_tests  changes_personnalised.py  modeling.ipynb  scoring.ipynb  test  test_ongoing_sales.ipynb
V2/inference/: TF_model.h5  app.py  inference_v2.py  pyproject.toml  type.py
V2/inference/tests/: test_engine.py
V2/logs/hparam_tuning/: events.out.tfevents.1688464314.MacBook-Air-de-Priscille.local.33326.0.v2  events.out.tfevents.1688464333.MacBook-Air-de-Priscille.local.33326.1.v2  events.out.tfevents.1688480625.MacBook-Air-de-Priscille.local.3455.0.v2  events.out.tfevents.1689775817.MacBook-Air-de-Priscille.local.8243.0.v2
V2/logs/hparam_tuning/run-0/: events.out.tfevents.1688464368.MacBook-Air-de-Priscille.local.33326.2.v2  events.out.tfevents.1688480628.MacBook-Air-de-Priscille.local.3455.1.v2  events.out.tfevents.1689775819.MacBook-Air-de-Priscille.local.8243.1.v2
V2/preprocessing/: sale_preprocessing.py
V2/training_preparation/: 1_negative_interactions.ipynb  2_EDA.ipynb  3_lightGBM.ipynb
analysis/: lightGBM.ipynb
eval-metrics/: evaluation.py
eval_metrics/: evaluation.py
eval_metrics/test/: test_functions.py
preprocessing/: sale_preprocessing.ipynb  sale_preprocessing.py
(+21 files in other folders)
