[tool.poetry]
name = "inference"
version = "0.1.0"
description = "personnalised ranking inference"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing = "^3"
pydantic = "^1.10.9"
redis = "^4.5.5"
scikit-learn = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
